--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,16 @@
+<!doctype html>
+<head>
 <style>
 .slider {
     background: rgba(0, 0, 0, 0) url("multi-featured-slider/images/default.jpg") no-repeat scroll 0 80% / cover ;
-}
-.KTslider-holder {
-    transition: background-image 0.2s ease-in-out 0s;
+    height: 100%;
+    width: 100%;
 }
 </style>
+
+</head>
+<body>
 <div class="slider">
 </div>
+</body>
+</html>
