adding index.html

--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
     background: rgba(0, 0, 0, 0) url("multi-featured-slider/images/default.jpg") no-repeat scroll 0 80% / cover ;
     height: 100%;
     width: 100%;
+        position: absolute;
 }
 </style>
 
